# soundex

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/soundex/: soundex.h
src/: soundex.cpp
test/: CMakeLists.txt  soundextest.cpp
